# BazisLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json
